--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
-  flutter_secure_storage: ^3.3.1+1
-  shared_preferences: ^0.5.6
+  http: ^0.12.0+4
+  shared_preferences: ^0.5.6+1
+  flutter_keychain: ^1.0.0
 
 dev_dependencies:
   flutter_test:
